Botao girar mapa

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 
 </head>
 <body>
-  <div><div id="objeto" draggable="true"></div></div>
+  <nav class="navegacao">
+    <button class="girarBotao">Girar <br> mapa</button>
+  </nav>
 
+  <nav class="cartas">
+    <div><div id="objeto" draggable="true"></div></div>
+  </nav>
+  
   <div class="mapa">
     <div class="fundoBase">
       <div class="base">
