--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <button class="girarBotao">Girar <br> mapa</button>
   </nav>
 
-  <nav class="cartas">
+  <nav class="cartas" ondragover="allowDrop(event)" ondrop="drop(event)">
     <div><div id="objeto" draggable="true"></div></div>
   </nav>
   
