Botão Gerar Cartas criado

--- a/index.html
+++ b/index.html
@@ -13,7 +13,19 @@
   </nav>
 
   <nav class="cartas" ondragover="allowDrop(event)" ondrop="drop(event)">
-    <div><div id="objeto" draggable="true"></div></div>
+    <div class="deck">
+      <button class="gerarCartas">Gerar cartas: </button>
+      <div><div class="objeto" draggable="true"></div></div>
+      <div><div class="objeto" draggable="true"></div></div>
+      <div><div class="objeto" draggable="true"></div></div>
+      <div><div class="objeto" draggable="true"></div></div>
+      <div><div class="objeto" draggable="true"></div></div>
+      <div><div class="objeto" draggable="true"></div></div>
+      <div><div class="objeto" draggable="true"></div></div>
+      <div><div class="objeto" draggable="true"></div></div>
+      <div><div class="objeto" draggable="true"></div></div>
+      <div><div class="objeto" draggable="true"></div></div>
+    </div>
   </nav>
   
   <div class="mapa">
