--- a/teste2.html
+++ b/teste2.html
@@ -1,24 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Girar Div</title>
+  <title>Transferir Objeto</title>
   <style>
-    #div-girar {
+    .objeto {
+      width: 100px;
+      height: 100px;
+      background-color: #ccc;
+      border: 1px solid #aaa;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .alvo {
       width: 200px;
       height: 200px;
-      background-color: #f2f2f2;
-      transition: transform 0.5s;
+      background-color: #eee;
+      border: 1px solid #ddd;
+      margin: 20px;
+      padding: 20px;
     }
   </style>
 </head>
 <body>
-  <div id="div-girar">Girar</div>
-  <button id="botao-girar">Girar</button>
+  <div class="objeto">Objeto</div>
+
+  <div class="alvo">Alvo 1</div>
+  <div class="alvo">Alvo 2</div>
+  <div class="alvo">Alvo 3</div>
+  <div class="alvo">Alvo 4</div>
+  <div class="alvo">Alvo 5</div>
 
   <script>
-    document.getElementById('botao-girar').addEventListener('click', function() {
-      var div = document.getElementsByClassName('.mapa');
-      div.style.transform = 'rotate(180deg)';
+    let objetoSelecionado = null;
+
+    function selecionarObjeto(objeto) {
+      objetoSelecionado = objeto;
+    }
+
+    document.querySelector('.objeto').addEventListener('click', function() {
+      selecionarObjeto(this);
+    });
+
+    document.querySelectorAll('.alvo').forEach(function(alvo) {
+      alvo.addEventListener('click', function() {
+        if (objetoSelecionado) {
+          this.appendChild(objetoSelecionado);
+          objetoSelecionado.addEventListener('click', function() {
+            selecionarObjeto(this);
+          });
+        }
+      });
     });
   </script>
 </body>
