gerador de cartas

--- a/index.html
+++ b/index.html
@@ -15,16 +15,11 @@
   <nav class="cartas" ondragover="allowDrop(event)" ondrop="drop(event)">
     <div class="deck">
       <button class="gerarCartas">Gerar cartas: </button>
-      <div><div class="objeto" draggable="true"></div></div>
-      <div><div class="objeto" draggable="true"></div></div>
-      <div><div class="objeto" draggable="true"></div></div>
-      <div><div class="objeto" draggable="true"></div></div>
-      <div><div class="objeto" draggable="true"></div></div>
-      <div><div class="objeto" draggable="true"></div></div>
-      <div><div class="objeto" draggable="true"></div></div>
-      <div><div class="objeto" draggable="true"></div></div>
-      <div><div class="objeto" draggable="true"></div></div>
-      <div><div class="objeto" draggable="true"></div></div>
+      <div class="personagem" draggable="true"></div>
+      <div class="personagem" draggable="true"></div>
+      <div class="personagem" draggable="true"></div>
+      <div class="personagem" draggable="true"></div>
+      <div class="personagem" draggable="true"></div>
     </div>
   </nav>
   
@@ -3533,6 +3528,6 @@
   
   </div> 
     
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
 </body>
 </html>
