--- a/index.html
+++ b/index.html
@@ -996,6 +996,43 @@
       </table>
     </div>
 
+    <!--Junção mar e areia-->
+    <div class="fundoMarAreia">
+      <table>
+        <tr>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+          <td class="marAreia"></td>
+        </tr>
+      </table>
+    </div>
+
     <!--Mar-->
     <div class="fundoMar">
       <table class="mar">
@@ -2765,6 +2802,43 @@
           <td class="areaDeNado"></td>
           <td class="areaDeNado"></td>
           <td class="areaDeNado"></td>
+        </tr>
+      </table>
+    </div>
+
+    <!--Junção mar e areia-->
+    <div class="fundoMarAreiaInvertido">
+      <table>
+        <tr>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
+          <td class="marAreiaI"></td>
         </tr>
       </table>
     </div>
