--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <!--Base A-->
 
   <div class="mapa">
-    <div class="fundoBase">
-      <table class="">
+    <div>
+      <table class="fundoBase">
         <tr>
           <td class="bloco"></td>
           <td class="bloco"></td>
@@ -332,10 +332,9 @@
     </div>
 
     <!--Muro-->
-    <div class="barreira">
-
+    <div >
       <!--Portão-->
-      <table>
+      <table class="barreira">
         <tr>
           <td class="muro"></td>
           <td class="muro"></td>
@@ -371,8 +370,8 @@
     </div>
 
     <!--Campo de batalha A-->
-    <div class="fundoCampoBatalha">
-      <table class="">
+    <div>
+      <table class="fundoCampoBatalha">
         <tr>
           <td class="blocoDeCombate"></td>
           <td class="blocoDeCombate"></td>
@@ -997,8 +996,8 @@
     </div>
 
     <!--Junção mar e areia-->
-    <div class="fundoMarAreia">
-      <table>
+    <div >
+      <table class="fundoMarAreia">
         <tr>
           <td class="marAreia"></td>
           <td class="marAreia"></td>
@@ -2807,8 +2806,8 @@
     </div>
 
     <!--Junção mar e areia-->
-    <div class="fundoMarAreiaInvertido">
-      <table>
+    <div >
+      <table class="fundoMarAreiaInvertido">
         <tr>
           <td class="marAreiaI"></td>
           <td class="marAreiaI"></td>
@@ -2844,8 +2843,8 @@
     </div>
 
     <!--Campo de Batalha B-->
-    <div class="fundoCampoBatalha">
-      <table class="">
+    <div >
+      <table class="fundoCampoBatalha">
         <tr>
           <td class="blocoDeCombate"></td>
           <td class="blocoDeCombate"></td>
@@ -3471,10 +3470,10 @@
 
     <!--Barreira-->
     <!--Muro-->
-    <div class="barreira">
+    <div >
 
       <!--Portão-->
-      <table>
+      <table class="barreira">
         <tr>
           <td class="muro"></td>
           <td class="muro"></td>
@@ -3510,8 +3509,8 @@
     </div>
 
     <!--Base B-->
-    <div class="fundoBaseB">
-      <table class="">
+    <div >
+      <table class="fundoBase">
         <tr>
           <td class="bloco"></td>
           <td class="bloco"></td>
