--- a/index.html
+++ b/index.html
@@ -19,35 +19,35 @@
     <div>
       <table class="fundoBase">
         <tr>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
         </tr>
         <tr>
           <td class="bloco"></td>
@@ -3760,66 +3760,35 @@
           <td class="bloco"></td>
         </tr>
         <tr>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-        </tr>
-        <tr>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
-          <td class="bloco"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
+          <td class="blocoEntrada"></td>
         </tr>
       </table>
     </div>
