botao resetar movimentação

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <header>  
     <nav class="navegacao" >
     <button class="girarBotao">Girar <br> mapa</button>
+    <button class="resetar">Resetar <br> Movimentação</button>
   </nav></header>
   
   <!--Base A-->
