--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <header>
+    <button class="girarBotao">Girar Mapa</button>
     <button id="reset-button">Resetar Movimentações</button>
   </header>
   <table>
