proibir cartas voltarem a td 0

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <button class="girarBotao">Girar Mapa</button>
     <button id="reset-button">Resetar Movimentações</button>
   </header>
+
+  <nav>
+    <button class="gerarCartas">Gerar Cartas Deck A</button>
+  </nav>
+
   <table>
     <tr class="fundo">
       <td class="deck"></td>
@@ -4094,7 +4099,6 @@
   </table>
 
   <footer>
-    <button class="gerarCartas">Teste</button>
   </footer>
 
   <script type="module" src="index.js"></script>
