--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <button class="gerarCartas">Gerar Cartas Deck A</button>
   </nav>
 
+  <aside>
+    <div class="img"></div>
+  </aside>
+
   <table>
     <tr class="fundo">
       <td class="deck"></td>
