--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
   </nav>
 
   <aside>
-    <img src="" alt="">
+    <div class="exibirCarta">
+      <img class="imagem" src="" alt="">
+      <span class ="textoCarta"> </span>
+    </div>
   </aside>
 
   <table>
