exibir status das cartas

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
   </nav>
 
   <aside>
+    <button class="recolherStatusCartas"><<</button>
     <div class="exibirCarta">
       <img class="imagem" src="" alt="">
-      <span class ="textoCarta"> </span>
+      <div class ="textoCarta"> </div>
     </div>
   </aside>
 
