--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
   <header>
-    <button class="girarBotao">Girar Mapa</button>
     <button id="reset-button">Resetar Movimentações</button>
   </header>
 
@@ -17,7 +16,7 @@
   </nav>
 
   <aside>
-    <button class="recolherStatusCartas"><<</button>
+    <button class="recolherStatusCartas">Ocultar Status</button>
     <div class="exibirCarta">
       <img class="imagem" src="" alt="">
       <div class ="textoCarta"> </div>
