decresção de locomoção adicionada

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <button id="reset-button">Resetar Movimentações</button>
+    <button id="reset-button">Encerrar Turno</button>
   </header>
 
   <nav>
@@ -20,6 +20,7 @@
     <div class="exibirCarta">
       <img class="imagem" src="" alt="">
       <div class ="textoCarta"> </div>
+      <div class = "locomocao"> </div>
     </div>
   </aside>
 
