--- a/teste.html
+++ b/teste.html
@@ -3,30 +3,60 @@
 <head>
   <title>Exemplo de página com botão para ir ao fim</title>
   <style>
-    .container {
-      width: 800px;
-      height: 2000px;
-      background-color: #f0f0f0;
-      overflow-y: auto;
-    }
+.imagens {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: blue;
+  width: 100px;
+  height: 100px;
+}
+
+.imagens img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  animation: trocar-imagem 1.5s infinite;
+}
+
+@keyframes trocar-imagem {
+  0% {
+    opacity: 0;
+  }
+  33.33% {
+    opacity: 1;
+  }
+  66.66% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+.imagens img:nth-child(0) {
+  animation-delay: 0s;
+}
+
+.imagens img:nth-child(1) {
+  animation-delay: 0.5s;
+}
+
+.imagens img:nth-child(2) {
+  animation-delay: 1s;
+}
   </style>
 </head>
 <body>
-  <div class="container">
-    <!-- Conteúdo da página -->
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet nulla auctor, vestibulum magna sed, convallis ex.</p>
-    <!-- ... -->
-    <button id="ir-ao-fim">Ir ao fim do mapa</button>
+  <div class="imagens">
+    <img src="./images/baseA.jpg" alt="Imagem 1">
+    <img src="./images/chão.jpg" alt="Imagem 2">
+    <img src="./images/campodebatalha.jpg" alt="Imagem 3">
   </div>
-
   <script>
-    const botaoIrAoFim = document.getElementById('ir-ao-fim');
-    const container = document.querySelector('.container');
-
-    botaoIrAoFim.addEventListener('click', () => {
-      container.scrollTop = container.scrollHeight;
-      window.scrollTo(0, document.body.scrollHeight);
-    });
   </script>
 </body>
 </html>
