botao Avançar Cartas

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="turnos"></div>
     <button id="reset-button">Encerrar Turno</button>
     <button id="ir-ao-fim">Fim do mapa!</button>
+    <button id="avancar-cartas">Avançar Cartas</button>
   </header>
 
   <!--<nav>
